force-app/main/default/objects/LeanData__Routing_Deployment__c/LeanData__Routing_Deployment__c.object-meta.xml
<CustomObject>
    <label>Routing Deployment</label>
    <nameField>
        <label>Routing_Deployment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Routing Deployments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>