force-app/main/default/objects/LeanData__Routing_Deployment__c/fields/LeanData__Graph_JSON_5__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Graph_JSON_5__c</fullName>
    <label>Graph_JSON_5__c</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>