force-app/main/default/objects/LeanData__Routing_Deployment__c/fields/LeanData__LD_Business_Unit__c.field-meta.xml
<CustomField>
    <fullName>LeanData__LD_Business_Unit__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>LD Business Unit</label>
    <referenceTo>LeanData__LD_Business_Unit__c</referenceTo>
    <relationshipLabel>LD Business Unit</relationshipLabel>
    <relationshipName>Routing_Deployment_LD_Business_Unit</relationshipName>
    <type>Lookup</type>
</CustomField>