force-app/main/default/objects/LeanData__Routing_Deployment__c/fields/LeanData__Metric_Translation_JSON__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Metric_Translation_JSON__c</fullName>
    <label>Metric Translation JSON</label>
    <length>131072</length>
    <type>LongTextArea</type>
</CustomField>