force-app/main/default/objects/LeanData__Routing_Deployment__c/fields/LeanData__Node_Name_To_Height_Map__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Node_Name_To_Height_Map__c</fullName>
    <label>Node Name to Height Map</label>
    <length>65536</length>
    <type>LongTextArea</type>
</CustomField>