force-app/main/default/objects/LeanData__Routing_Deployment__c/fields/LeanData__Parent_Deployment__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Parent_Deployment__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Parent Deployment</label>
    <referenceTo>LeanData__Routing_Deployment__c</referenceTo>
    <relationshipLabel>Parent Deployments</relationshipLabel>
    <relationshipName>Parent_Deployments</relationshipName>
    <type>Lookup</type>
</CustomField>