force-app/main/default/objects/LeanData__Routing_Deployment__c/fields/LeanData__Write_Fields__c.field-meta.xml
<CustomField>
    <fullName>LeanData__Write_Fields__c</fullName>
    <label>Write Fields</label>
    <length>31000</length>
    <type>LongTextArea</type>
</CustomField>